add_subdirectory(unblur)
add_subdirectory(ctffind)
add_subdirectory(refine2d)
add_subdirectory(refine3d)
add_subdirectory(merge2d)
add_subdirectory(merge3d)
add_subdirectory(reconstruct3d)
add_subdirectory(sharpen_map)
add_subdirectory(warp_to_cistem)
add_subdirectory(projectx)
add_subdirectory(niko_test)
add_subdirectory(guix_job_control)
add_subdirectory(refine_ctf)
add_subdirectory(find_particles)
add_subdirectory(local_resolution)
add_subdirectory(convert_eer_to_mrc)
add_subdirectory(azimuthal_average)
if( BUILD_EXPERIMENTAL_FEATURES)
    add_subdirectory(simulate)
endif()